--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -106,6 +106,12 @@
               Backups
             </a>
           </li>
+          <li class="nav-subitem">
+            <a href="/schedules" class="nav-sublink {{ 'active' if request.endpoint == 'schedules_page' else '' }}">
+              <span class="nav-icon nav-icon-jobs"></span>
+              Schedules
+            </a>
+          </li>
         </ul>
       </li>
     </ul>
